# civ-rag-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.lambda  README.md  app.py  check_guru.py  civ_rag_v2_spec.md  docker-compose.yml  example.env  judgment.csv  pyproject.toml  requirements.txt
docs/: architecture.md  civ_rag_evolution.py
evaluation/: anchor_probe.py  answer_relevance.py  context_relevance_judge.py  divergent_probe.py  eval_runner.py  eval_set.txt  grounding.py  judgment.csv  judgment_haiku_agentic_baseline.csv  mechanism_probe.py  prior_override_probe.py  schema.py
infra/: apigw.tf  deploy.sh  ecr.tf  iam.tf  lambda.tf  main.tf  terraform.tfvars.example
models/: bm25_values.json
src/: api.py  config.py  logging_config.py  response_generator.py  schema.py  utils.py
src/agent/: construct_agents.py  tools.py
src/chains/: rag_pipeline.py  response_generator.py  tools.py  version_extractor.py
src/ingestion/: ingester.py
src/retrieval/: retriever.py  version_extractor.py
tests/ad-hoc/: check_guru.py  debug_failures.py  ingester_test.py  test_retrieval.py
tests/integration/: test_extractor.py  test_rag_pipeline.py  test_response_generator.py
tests/unit/: test_tools.py  test_utils.py
