[project]
name = "civilization-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyterlab>=4.5.6",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.1.14",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.2.3",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pinecone>=7.3.0",
    "pinecone-text>=0.11.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "structlog>=26.1.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
