[project]
name = "civilization-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# Shared core: imported by all three paths (serve / ingest / eval) via
# config, retriever, secrets, and logging_config. Kept minimal so the serve
# extra stays the only thing governing deployed-image size.
dependencies = [
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.1",
    "langchain-openai>=1.1.14",
    "pinecone>=7.3.0",
    "pinecone-text>=0.11.0",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
# Query-serving path (the deployed artifact). Streamlit UI stays here for now;
# it splits into an `api` (FastAPI) extra when the FastAPI wrap lands.
serve = [
    "langgraph>=1.2.3",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "streamlit>=1.56.0",
]
# Scrape + embed + upsert to Pinecone. Runs locally on demand, never deployed.
ingest = [
    "beautifulsoup4>=4.14.3",
    "langchain-community>=0.4.2",
    "requests>=2.33.1",
]
# Offline eval harness. Imports generate_response in-process (hence [serve]) and
# the raw anthropic SDK directly for the judges. Runs locally, never deployed.
eval = [
    "civilization-chatbot[serve]",
    "anthropic>=0.96.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
