[project]
name = "civilization-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# Shared core: imported by all three paths (serve / ingest / eval) via
# config, retriever, secrets, and logging_config. Kept minimal so the serve
# extra stays the only thing governing deployed-image size.
dependencies = [
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.1",
    "langchain-openai>=1.1.14",
    "pinecone>=7.3.0",
    "pinecone-text>=0.11.0",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
# Shared serving stack: the agent runtime + Postgres-backed checkpointer with a
# connection pool. Imported by construct_agents.py, so BOTH client extras below
# (serve = Streamlit, api = FastAPI) depend on it. Neither client's deps leak
# into the other.
serve-core = [
    "langgraph>=1.2.3",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
]
# Streamlit client (one front-end over serve-core).
serve = [
    "civilization-chatbot[serve-core]",
    "streamlit>=1.56.0",
]
# FastAPI client (the deployed API; step 3 wraps this in a container-image
# Lambda and adds Mangum). Deliberately excludes Streamlit.
api = [
    "civilization-chatbot[serve-core]",
    "fastapi>=0.139.2",
    "langchain-aws>=1.6.3",
    "mangum>=0.21.0",
    "uvicorn[standard]>=0.51.0",
]
# Scrape + embed + upsert to Pinecone. Runs locally on demand, never deployed.
ingest = [
    "beautifulsoup4>=4.14.3",
    "langchain-community>=0.4.2",
    "requests>=2.33.1",
]
# Offline eval harness. Imports generate_response in-process (hence serve-core)
# and the raw anthropic SDK directly for the judges. Runs locally, never deployed.
eval = [
    "civilization-chatbot[serve-core]",
    "anthropic>=0.96.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
